[package]
name = "gitr"
version = "0.1.0"
edition = "2021"
authors = ['Oliver373']
description = "This promgram is a exerice to implemented basic 'git' by rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap={version="^4", features = ["derive"]}